initial check-in for project1-L01

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My cse341 project1",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "server.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/j-kleine/cse341-project1/issues"
   },
-  "homepage": "https://github.com/j-kleine/cse341-project1#readme"
+  "homepage": "https://github.com/j-kleine/cse341-project1#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
